# cars

./: .coverage  README.md  main.py  pyproject.toml  pytest.ini
cars/: converter.py  enums.py  model.py  validator.py
cars/cars_service/: filter.py  group_and_sort.py  service.py  statistics.py
cars/file/: reader.py  service.py
data/: cars.json  cars.txt
test_data/: cars_test.json  cars_test.txt  wrong_content_cars_test.txt
tests/: conftest.py  test_car.py  test_converter.py  test_data_processor.py  test_validator.py
tests/car/: conftest.py  test_from_dict.py  test_has_color.py  test_has_component.py  test_has_model.py  test_has_price_between.py
tests/cars_service/: conftest.py
tests/cars_service/filter/: conftest.py  test_get_cars_with_higher_mileage_than.py  test_get_cars_with_price_between.py  test_get_extreme_priced_cars.py  test_sort_by_model.py
tests/cars_service/group_and_sort/: conftest.py  test_get_most_expensive_car_for_model.py  test_group_by_color.py  test_group_cars_by_component.py  test_group_most_expensive_car_by_model.py
tests/cars_service/statistics/: test_get_statistics_for.py
tests/converter/: test_converter.py
tests/file/: test_data_processing.py  test_get_lines.py
tests/file/data_factory/: test_data_processor.py  test_from_json_file_to_car.py  test_from_txt_file_to_car.py
tests/file/json_file_service/: test_get_lines.py
tests/file/txt_file_service/: test_get_lines.py
tests/json_file_service/: test_get_lines.py
tests/validator/: test_cars_validator.py  test_cars_validator_methods.py
