[tool.poetry]
name = "cars"
version = "0.1.0"
description = ""
authors = ["Ula <ula.malin35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pyright = "^1.1.359"
coverage = "^7.4.4"
coverage-badge = "^1.1.0"
aiofiles = "^23.2.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
